# SMC-NUTS

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
experiments/: plot_experiments.py  run_experiments.py
smcnuts/: samples.py  smc_sampler.py
smcnuts/estimate/: estimate.py  estimate_from_tempered.py
smcnuts/forwardkernel/: forwardkernel.py
smcnuts/lkernel/: asymptotic_lkernel.py  forward_lkernel.py  gaussian_lkernel.py
smcnuts/model/: bridgestan.py
smcnuts/postprocessing/: ess_tempering.py
smcnuts/proposal/: nuts.py  nuts_acc_rej.py  nuts_acc_rej_temp.py  utils.py
smcnuts/recycling/: ess.py
smcnuts/samples/: samples.py
smcnuts/tempering/: ESS_tempering.py  adaptive_tempering.py
smcnuts/utils/: CheckAttributes.py  Normal.py
stan_models/PRMwCD/: PRMwCD.json  PRMwCD.params  PRMwCD.stan  model_config.json
stan_models/arK/: arK.json  arK.params  arK.stan  model_config.json
stan_models/arma/: arma.json  arma.params  arma.stan  model_config.json
stan_models/eight_schools/: eight_schools.json  eight_schools.params  eight_schools.stan  model_config.json
stan_models/garch/: garch.json  garch.params  garch.stan  model_config.json
stan_models/gp_pois_regr/: gp_pois_regr.json  gp_pois_regr.params  gp_pois_regr.stan  model_config.json
stan_models/low_dim_gauss_mix_collapse/: low_dim_gauss_mix_collapse.json  low_dim_gauss_mix_collapse.params  low_dim_gauss_mix_collapse.stan  model_config.json
stan_models/normal_5d/: model_config.json  normal_5d.json  normal_5d.params  normal_5d.stan
stan_models/student_t/: model_config.json  (+3 more)
(+1 files in other folders)
