[build-system]
requires = ["pybind11>=2.8", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smcnuts"
version = "0.1.0"
description = "An SMC sampler with a No-U-Turn-Sampler proposal in Python."
authors = ["Matthew Carter <m.j.carter2@liverpool.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19"
scipy = "^1"
autograd = "^1.6"
seaborn = "^0.12"
tqdm = "^4.65"
