[build-system]
requires = ["pybind11>=2.8", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smcnuts"
version = "0.1.0"
description = "An SMC sampler with a No-U-Turn-Sampler proposal in Python."
authors = [
    "Lee Devlin <lee.devlin@liverpool.ac.uk>",
    "Matthew Carter <mcarter@liverpool.ac.uk>",
    "Paul Horridge <paul.horridge@liverpool.ac.uk>",
    "Peter L. Green <plgreen@liverpool.ac.uk>",
    "Simon Maskell <smaskell@liverpool.ac.uk>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19"
scipy = "^1"
autograd = "^1.6"
seaborn = "^0.12"
tqdm = "^4.65"
